Remove current colour of title due to contrasting issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,5 +69,4 @@ body {
 
 .cell-overlay .title {
     font-size: 100px;
-    color: rgba(246, 186, 69);
 }
